--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </section>
     <section>
       <div id="name"><h1>Hello Arvind</h1></div>
+      <h1>Hello Angular</h1>
     </section>
   </body>
 </html>
